# GoIt_Web_HW_9_3

./: authors.json  main.py  pyproject.toml  upload.py
database/: connect.py  models.py
