[tool.poetry]
name = "goit-web-hw-9-3"
version = "0.1.0"
description = ""
authors = ["filinmbg <filinmbg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.7.1"
beautifulsoup4 = "^4.12.2"
scrapy = "^2.11.0"
tdqm = "^0.0.1"
mongoengine = "^0.27.0"
aiohttp = "^3.9.0"
colorlog = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
